# Hoshi4QQBot

./: .env.dev  .env.prod  .gitignore  README.md  bot.py  pyproject.toml  schedule_template.csv
hoshi_chan_assistant/plugins/checkin_lobby/: __init__.py
hoshi_chan_assistant/plugins/compos_search/: __init__.py
hoshi_chan_assistant/plugins/helper/: __init__.py
hoshi_chan_assistant/plugins/hoshi_scheduler/: __init__.py
hoshi_chan_assistant/plugins/libs/: asoul_cnki.py  customized_rules.py  file_reader.py
hoshi_chan_assistant/plugins/music_list_ckecker/: __init__.py
hoshi_chan_assistant/plugins/test_printer/: __init__.py
hoshi_chan_assistant/plugins/voice_response/: __init__.py
hoshi_chan_assistant/plugins/watchdog/: __init__.py
